--- a/08-proyecto2/src/index.css
+++ b/08-proyecto2/src/index.css
@@ -81,8 +81,8 @@ code {
 }
 
 .footer{
-  min-height: 150px;
-  line-height: 100px;
+  min-height: 40px;
+  line-height: 7px;
   text-align: center;
   font-size: 14px;
   margin-top: 35px;
@@ -90,4 +90,135 @@ code {
   border-top: 3px solid black;
   background: #f5f5f5;
   color: #444;
+}
+
+.page,
+.home{
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+}
+
+.home h1{
+  margin-top: 70px;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.home h2{
+  margin-bottom: 70px;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.home a{
+  color: #268100;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.page .heading,
+.home .heading{
+  margin-bottom: 0;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.home p{
+  font-weight: 300;
+  font-style: normal;
+}
+
+input[type="text"],
+textarea{
+  display: block;
+  padding: 15px;
+  margin-top: 25px;
+  width: 250px;
+}
+
+input[type="submit"],
+button{
+  font-size: 15px;
+  padding: 15px;
+  margin-top: 15px;
+  border: 0px;
+  border-radius: 5px;
+  color: white;
+  background-color: #268100;
+  text-decoration: none;
+  transition: all 300ms;
+  cursor: pointer;
+}
+
+.home a:hover,
+input[type="submit"]:hover,
+button:hover{
+  background-color: rgb(8, 184, 8);
+}
+
+.works{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.work-item{
+  flex-basis: 30%;
+  flex-grow: 1;
+  margin: 30px;
+}
+
+.work-item .mask{
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  box-shadow: 0px 5px 15px gray;
+}
+
+.work-item img{
+  width: 170%;
+  transition: all 500ms;
+}
+
+.work-item .mask:hover img{
+  width: 200%;
+  margin-right: 30%;
+}
+
+.work-item span{
+  display: block;
+  color: gray;
+  margin-top: 25px;
+}
+
+.work-item h2{
+  display: block;
+  font-size: 30px;
+  color: black;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.work-item a{
+  color: black;
+  text-decoration: none;
+  transition: all 300ms;
+}
+
+.work-item a:hover{
+  color: #268100
+}
+
+.work-item h3{
+  display: block;
+  color: gray;
+  margin-top: 0px;
+  padding-top: 15px;
+  border-top: 1px solid #ddd;
+}
+
+.page-work .mask{
+  height: 300px;
+  overflow: hidden;
+  box-shadow: 0px 0px 20px #ccc;
 }
