--- a/proyecto/src/index.css
+++ b/proyecto/src/index.css
@@ -89,7 +89,50 @@ body {
 .content{
   grid-area: content;
   border: 5px solid green;
-  background: lightgreen;
+  background: #f6f7f9;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.peli-item{
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 6px #ddd;
+  margin: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+button,
+input[type="submit"],
+input[type="button"]{
+  width: 100px;
+  background: linear-gradient(160deg, #03228f 0%, #0b70e1 77%);
+  color: white;
+  border: 0;
+  outline: 0;
+  padding: 15px;
+  border-radius: 3px;
+  margin-top: 15px;
+  text-transform: capitalize;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 300ms;
+}
+
+.peli-item .edit:hover{
+  background: #e77b00;
+}
+
+.peli-item .delete:hover{
+  background: #9b0202;
 }
 
 .lateral{
