--- a/proyecto/public/index.css
+++ b/proyecto/public/index.css
@@ -88,7 +88,6 @@ body {
 /* Estilos para el contenido principal */
 .content{
   grid-area: content;
-  border: 5px solid green;
   background: #f6f7f9;
   display: flex;
   flex-flow: row wrap;
@@ -97,6 +96,7 @@ body {
 }
 
 .peli-item{
+  flex-grow: 1;
   background: white;
   border-radius: 10px;
   box-shadow: 0px 0px 6px #ddd;
@@ -123,6 +123,10 @@ input[type="button"]{
   font-weight: 500;
   cursor: pointer;
   transition: all 300ms;
+}
+
+.peli-item .edit{
+  margin-right: 7px;
 }
 
 .peli-item .edit:hover{
@@ -166,8 +170,30 @@ input[type="button"]{
   border-color: transparent;
 }
 
+/* Estilos para el pie de página */
 .footer{
   grid-area: footer;
-  border: 5px solid black;
-  background: lightpink;
+  background: #d1defa;
+  color: #454545;
+  border-top: 1px solid white;
+  text-align: left;
+  line-height: 68px;
+  padding-left: 25px;
+}
+
+.footer a{
+  color: #0b468a;
+  text-decoration: none;
+}
+
+@media(max-width: 1085px){
+  .content{
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .peli-item{
+    width: 80%;
+  }
 }
