--- a/proyecto-portafolio/src/index.css
+++ b/proyecto-portafolio/src/index.css
@@ -73,6 +73,23 @@ code {
   transition: all 300ms;
 }
 
+.header .active,
 .header a:hover{
   color: #fa4529;
+}
+
+.content{
+  min-height: 500px;
+}
+
+.footer{
+  min-height: 150px;
+  line-height: 120px;
+  text-align: center;
+  font-size: 14px;
+  margin-top: 35px;
+  padding-top: 45px;
+  border-top: 3px solid black;
+  background: #f5f5f5;
+  color: #444;
 }
