--- a/proyecto-portafolio/src/index.css
+++ b/proyecto-portafolio/src/index.css
@@ -87,9 +87,56 @@ code {
   line-height: 120px;
   text-align: center;
   font-size: 14px;
-  margin-top: 35px;
+  margin-top: 80px;
   padding-top: 45px;
   border-top: 3px solid black;
   background: #f5f5f5;
   color: #444;
+}
+
+.home h1{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 400;
+  font-size: 60px;
+  margin-bottom: 0px;
+  margin-top: 80px;
+}
+
+.home strong{
+  color: #fa4529;
+}
+
+.home h2{
+  color: gray;
+  font-weight: lighter;
+}
+
+.home a{
+  padding: 7px;
+  border-radius: 5px;
+  color: white;
+  background-color: #fa4529;
+  text-decoration: none;
+  transition: all 300ms;
+}
+
+.home a:hover{
+  background-color: rgb(26, 137, 26);
+}
+
+.page .heading,
+.home .heading{
+  font-size: 40px;
+  font-weight: 500;
+  color: black;
+  margin-bottom: 0px;
+}
+
+.page .heading{
+  font-size: 55px;
+  font-weight: bold;
+}
+
+.home p{
+  color: rgb(98, 97, 97);
 }
