--- a/proyecto-portafolio/src/index.css
+++ b/proyecto-portafolio/src/index.css
@@ -79,15 +79,15 @@ code {
 }
 
 .content{
-  min-height: 500px;
+  min-height: 581px;
 }
 
 .footer{
-  min-height: 150px;
-  line-height: 120px;
+  min-height: 60px;
+  line-height: 7px;
   text-align: center;
   font-size: 14px;
-  margin-top: 80px;
+  margin-top: 40px;
   padding-top: 45px;
   border-top: 3px solid black;
   background: #f5f5f5;
@@ -120,8 +120,11 @@ code {
   transition: all 300ms;
 }
 
-.home a:hover{
+.home a:hover,
+input[type="submit"]:hover,
+button{
   background-color: rgb(26, 137, 26);
+  cursor: pointer;
 }
 
 .page .heading,
@@ -139,4 +142,25 @@ code {
 
 .home p{
   color: rgb(98, 97, 97);
+}
+
+input[type="text"],
+textarea{
+  display: block;
+  padding: 15px;
+  margin-top: 25px;
+  width: 250px;
+}
+
+input[type="submit"],
+button{
+  font-size: 15px;
+  padding: 15px;
+  border: 0px;
+  margin-top: 15px;
+  border-radius: 5px;
+  color: white;
+  background-color: #fa4529;
+  text-decoration: none;
+  transition: all 300ms;  
 }
