--- a/memorizacion/src/App.css
+++ b/memorizacion/src/App.css
@@ -37,8 +37,25 @@
   }
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="submit"] {
   border: 2px solid #000;
   padding: 10px;
   margin: 10px;
+}
+
+input[type="submit"] {
+  background-color: #61dafb;
+  color: #000;
+  cursor: pointer;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 16px;
+  padding: 10px 20px;
+  border: none;
+  opacity: 0.8;
+}
+
+input[type="submit"]:hover {
+  opacity: 1;
 }
