--- a/diversos-hooks/src/App.css
+++ b/diversos-hooks/src/App.css
@@ -36,3 +36,35 @@
     transform: rotate(360deg);
   }
 }
+
+.form input,
+.form textarea{
+    display: block;
+    width: 80%;
+    max-width: 300px;
+    margin: 15px auto;
+    padding: 10px;
+}
+
+.form input[type="submit"]{
+  width: 40%;
+  cursor: pointer;
+  margin-bottom: 100px;
+  background-color: #61dafb;
+  color: #282c34;
+  border: none;
+  border-radius: 3px;
+}
+
+.form input[type="submit"]:hover{
+  background-color: #4ca5c8;
+  color: #fff;
+  border-radius: 3px;
+}
+
+.code{
+  background-color: #282c34;
+  color: #61dafb;
+  padding: 20px;
+  font-size: 14px;
+}
