--- a/blog-MERN/src/index.css
+++ b/blog-MERN/src/index.css
@@ -107,9 +107,33 @@ body {
   padding-right: 25px;
 }
 
+.jumbo{
+  width: 85%;
+  padding: 55px;
+  padding-bottom: 75px;
+  background: white;
+  border-radius: 10px;
+  margin: 25px auto;
+  box-shadow: 0px 0px 6px #ddd;
+}
+
+.jumbo h1{
+  font-size: 35px;
+  color: #444;
+}
+
+.jumbo p{
+  display: block;
+  margin-bottom: 40px;
+  font-size: 20px;
+  color: #666;
+}
+
+.button,
 button,
 input[type="submit"],
 input[type="button"]{
+  text-decoration: none;
   width: 100px;
   background: linear-gradient(160deg, #03228f 0%, #0b70e1 77%);
   color: white;
